--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-opencv-python-headless==4.2.0.32
+opencv-python-headless==4.11.0.86  # or use >=4.5.1 for flexibility
 pytesseract==0.3.7
 numpy==1.19.3
 Flask==1.1.1
 Pillow==8.0.1
+git add requirements.txt
+git commit -m "Fix OpenCV dependency issue"
+git push origin main
