--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-opencv-python-headless==4.11.0.86  # or use >=4.5.1 for flexibility
-pytesseract==0.3.7
-numpy>=1.21.2
 Flask==2.2.5
+gunicorn
+opencv-python-headless==4.2.0.32
+pytesseract==0.3.7
+numpy==1.19.3
 Pillow==8.0.1
